Ref: Fix Sonar issues